welcome.lessons.welcome.array.search.AverageValue.scala.error
occurrences:2: error: not found: value resultat
  resultat = 0
  ^occurrences:5: error: not found: value resultat
      resultat = resultat + 1
      ^occurrences:8: error: not found: value resultat
  return resultat
         ^