welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var moyenne = 0
  for (k <- 0 to nums.length-1) {
    moyenne = moyenne + nums(k)
  }
  return moyenne/nums.length
}